# debra

./: .gitignore  main.py  pyproject.toml
auth_handler/: __init__.py  google_auth_handler.py
debra/gmail_agent/: agent.py  config.py  prompt.py  util.py
gmail_manager/: __init__.py  config.py  gmail_service.py
